<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
    Stroke5 Chinese Input Method for Android
    Copyright (C) 2012 Wanleung's Workshop

    Author: Wan Leung Wong (wanleung@wanleung.com)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/
-->
<resources>
    <string name="ime_name">Stroke5 Keyboard</string>
    <string name="database_version" translatable="false">1</string>
    <string name="result_max" translatable="false">5</string>
    <string name="candidates_bottom_weight" translatable="false">3</string>
    <string name="pref_about">About</string>
    <string name="ime_version" translatable="false">0.1</string>

    <!-- MainActivity strings -->
    <string name="app_subtitle">Chinese Stroke-Based Input Method</string>
    <string name="setup_title">Setup Steps</string>
    <string name="step_one_title">Enable the Keyboard</string>
    <string name="step_one_desc">Add Stroke5 Keyboard to your list of enabled input methods in System Settings.</string>
    <string name="step_two_title">Select as Input Method</string>
    <string name="step_two_desc">Choose Stroke5 Keyboard as your active input method so you can use it in any app.</string>
    <string name="btn_enable">Open Input Method Settings</string>
    <string name="btn_reopen_settings">Re-open Input Method Settings</string>
    <string name="btn_select">Choose Input Method</string>
    <string name="btn_about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="status_enabled">✓ Enabled</string>
    <string name="status_not_enabled">Not enabled</string>
    <string name="status_selected">✓ Active</string>
    <string name="status_not_selected">Not selected</string>
</resources>
